Intro edits...still in progress

--- a/paper/FW_cogsci_format.tex
+++ b/paper/FW_cogsci_format.tex
@@ -36,26 +36,29 @@ language acquisition
 %%INTRODUCTION%%%%
 \section{Introduction}
 
-What can children's first words reveal about the process by which humans acquire language? Over the course of the first years, children rapidly go from speechless infants to toddlers producing and learning language at an astounding rate \cite{fenson1994,bloom2002}. The first word marks the beginning of productive verbal language, and is an important and measurable insight into what a child is willing and able to talk about at that point in their development. 
+The emergence of language in infancy is among the most astonishing developmental processes. Over the course of their first years, children rapidly go from speechless infants to toddlers producing and learning language at an astounding rate \cite{fenson1994,bloom2002}. Marking the beginning of productive verbal language, a child’s first word is an important and measurable insight into what a child is willing and able to talk about at that point in their development.  Yet, in contrast to later milestones, children’s first words are an intimate moment between child and caregiver that is difficult for external observers to record or measure. Here we leverage large-scale data from parental reports to ask what children's first words reveal about two key issues in early language learning. 
 
-Comprehension of language precedes its production for infants. \citeA{bergelson2012} found that as early as 6 months many children already understand what many common nouns mean, instead of just recognizing and segmenting speech sounds (cite bergelson and swingley here). Cognitively, children are capable of successfully mapping a label to an object very early; however, productive language emerges later, and goes through intense phonological and morphological changes throughout development (citation here). If children are able to grasp the meanings of words from a very early age, why does a lag exist between comprehension and production?
+From a very early point in development, infants exhibit an aptitude for language, even showing a preference for infant-directed over adult-directed speech at 1 month \cite{cooper1990}.  Over the course of the first year, infants are learning to recognize the distinctive sounds and word forms of their native language \cite{kuhl2004} and to segment these phonetic forms and words \cite{werker2005}. Additionally, by 6 – 9  months, many infants already show a tendency to look to matching pictures when they hear common nouns, suggesting early beginnings for form-meaning mapping as well \cite{bergelson2012}. Infants’ language comprehension abilities appear to be reasonable well-developed prior to 12 months. However, the conventional wisdom holds that language production only tends to begin around the first birthday. Is this lag between comprehension and production real, or only apparent?
 
-The first word is the start of productive linguistic capabilities, and is an important method for studying language acquisition. While there has been much research on the development of language over the course of the first few years, there has been less research focusing specifically first words. First word occurences are discrete and instantaneous events which almost exclusively involve only the child and parent, and are almost impossibly to observe in a lab setting. However, despite the scarcity of data, first word productions are important because they mark the very beginnings of the intersection of cognitive and linguistic capabilities. 
+Second, what is the relationship between the words children learn and their conceptual development? Typically-developing monolingual children exhibit some particular relations between certain cognitive developments and language productions; for example, acquisition of words about disappearance are correlated with the acquisition of object permanence \cite{gopnik1986}.  In contrast, 2 and 5 year-old international adoptees newly learning English show the same pattern of language acquisition as monolingual infants, both in time course and pattern of productive utterances \cite{snedeker2005}. This dissociation suggests that at older ages conceptual development may interact very little with word learning, but what about at younger ages with general referential language acquisition? When trying to untangle conceptual and linguistic development in infants, the first word is a very important as a measurable developmental milestone. The first productive utterance is an easily recorded and more concrete indicator of a child’s developmental state.  Do patterns of first word productions suggest any relationship between language acquisition and cognitive development? 
 
+Because very early language is difficult to observe in the lab, we leverage parent reports to learn about children’s first words. A child’s first word is highly memorable for parents, and many parents record this milestone in baby books. As a scientific measure, however, parent report has both drawbacks and advantages. One issue with any self-report measure is that there is no way to validate participants' responses. Another complication is that parents may be biased observers, and interpret word-like babble as productive communication. Parent report is widely used as a measure of early child language, e.g. in the MacArthur-Bates Communicative Development Inventory (CDI), a vocabulary checklist that is both a reliable and valid measure of early vocabulary \cite{fenson1994,fenson2007}. Nevertheless, the reliability of the earliest ages of the CDI have been questioned \cite{feldman2000}.
 
-Although a child's first word is unlikely to occur in an experimental setting, almost every child produces a first word, and this event is highly memorable for parents. Therefore, we explored first words on a large-scale through parental self report across 4 separate populations. This measure of children's first words has obvious drawbacks and advantages. One issue with any self-report measure is that there is no way to validate participants' responses. Another complication is whether parents were reporting the first true occurrence of a word, or merely babble. However, the data we received from these surveys was generally very consistent, both within and across datasets, indicating that parents responded appropriately. In addition to yielding consistent data, our first word surveys were highly effective, and were completed quickly and with minimal effort by many parents. To counter the potential issues presented by using a self-report measure, we were very careful in selecting our participant populations. 
+To address the issues of self-report, we gathered data from a number of sources. We specifically targeted different populations in our selections of data sources. The diversity of these four datasets encouraged an representative sample of children's first words, with each data source contributing its own set of advantages and drawbacks to the complete dataset. 
 
-Using data collected from 4 different populations, we investigate the timeline of the emergence of productive language and some of the factors that may predict individual differences. Specifically, we look at the timecourse of first word production, and find evidence for word production prior to 12 months. An analysis of differences in conceptually different referents of first words for early versus later producers shows that older speakers do not first speak about semantically different things. Finally, we turn to factors that might affect first word production such as frequency of parental input and phonetic probability, and find ... something.  
-
-%%GENERAL DATA METHODS%%
-\section{General Data Collection Methods}
-Data for this study is comprised of four different datasets, each obtained from a different source. Three of the four datasets were drawn from surveys specifically designed for this study. The last dataset contains data from \href{http://wordbank.stanford.edu}{\tt{Wordbank}}, an online repository of data from the MacArthur-Bates Communicative Development Inventories (MB-CDI), a widely-used parent-report vocabulary checklist (Fenson et al., 2007).
-
-We specifically targeted different populations in our selections of data sources. The diversity of these four datasets encouraged an accurate representation of a child's first words, with each data source contributing its own set of advantages and drawbacks to the complete dataset. The first dataset source,  parents subscribed to The Children's Discovery Museum (CDM) mailing list, was chosen for collection because these parents were an ethnically diverse population with a higher education level than the general population, potentially leading to more accurate responses. For our next data source we targeted he Amazon Mechanical Turk(MTurk) population. This community is diverse in terms of age, gender, education level, and socio-economic status (SES), and was chosen because it is more representative of the general population.
+The first dataset source, parents subscribed to The Children's Discovery Museum (CDM) mailing list, was chosen for collection because these parents were an ethnically diverse population with a higher education level than the general population, potentially leading to more accurate responses. For our next data source we targeted the Amazon Mechanical Turk(MTurk) population. This community is diverse in terms of age, gender, education level, and socio-economic status (SES), and was chosen because it is more representative of the general population. 
 
 To complement our data from the general population, we next collected first word data from parents in the Psycholinguistic community. This population was specificaly selected for its familiarity with the subject as well as for their highly accurate diary records. However, this population ended up being very small (N = 58).
 
 Our final dataset, drawn from Wordbank, was chosen because datapoints came from the MB-CDI, which is typically filled out closer in time to when the child produced her first word, potentially yielding more accurate reports. A potential confound of the MB-CDI is that it may have a demand characteristic encouraging parents to report their children producing some word, as well as containing a somewhat limited set of potential words.
+
+However, the data we received from these surveys was generally very consistent, both within and across datasets, indicating that parents responded appropriately. In addition to yielding consistent data, our first word surveys were highly effective, and were completed quickly and with minimal effort by many parents. 
+
+Drawing on these datsets, we investigate the timecourse of the emergence of productive language   and potential factors that might lead to individual differences in linguistic development. In Analysis 1, we investigate differences in age of first word onset, and find that 75% of children produce a word prior to 12 months. In Analysis 2, we explore whether early and later producers are sampling first words from conceptually different categories, and find no significant distribution in semantic categories before and after the first year. Finally, in Analysis 3, we turn to factors that may result in certain words and conceptual categories being more frequently produced as a first word -- This will come later...
+
+%%GENERAL DATA METHODS%%
+\section{General Data Collection Methods}
+Data for this study is comprised of four different datasets, each obtained from a different source. Three of the four datasets were drawn from surveys specifically designed for this study. The last dataset contains data from \href{http://wordbank.stanford.edu}{\tt{Wordbank}}, an online repository of data from the MacArthur-Bates Communicative Development Inventories (MB-CDI), a widely-used parent-report vocabulary checklist (Fenson et al., 2007).
 
 Overall, these methods of parental report yielded consistent and rich data with minimal time investment on behalf of the parent. However, as with most self-report measures, our surveys did have some disadvantages. While in every data collection we tried to stress that a first word was defined as a consistent set of sounds referring to the same referent across many contextual frames, we have no way of validating the parental report. Another issue was standardization of the child's first word, especially in the MTurk dataset, discussed below. 
 
@@ -115,8 +118,8 @@ Why are some children producing language earlier than others, and are these word
 
 We do not find that later producers are sampling words from a different or more diverse range of conceptual categories, but instead find that children across development are speaking about the same kinds of things, and often even the same things. What makes these words more likely to be produced as a first word, if they do not significantly differ conceptually? In our next analysis, we examined both the phonetic probability of individual words within CDI categories, as well as their correlation with parental input.
 
-\subsection{Exclusion of "mama" and "dada"}
-While many parents reported that their child's first word was "mama" or "dada" (or some variant), we excluded these children from our analyses. Parents are obviously motivated to hear these words very early in babble, even when the word is not being used in a meaningful or consistent way. Therefore, we stressed in our surveys that parents were to report their children's first word $other$ than "mama" or "dada" to avoid the possibility of skewing the data. After pilot testing on Amazon Mechanical Turk, we added another question asking whether the child's first utterance was "mama" or "dada", and found that 1112 parents reported their children producing "mama" (N = 618) or "dada" (N = 494) other than another first word (N = 559).   
+\subsection{Exclusion of ``mama'' and ``dada''}
+While many parents reported that their child's first word was ``mama'' or ``dada'' (or some variant), we excluded these children from our analyses. Parents may be motivated to hear these words very early in babble, even when the word is not being used in a meaningful or consistent way. Therefore, we stressed in our surveys that parents were to report their children's first word $other$ than ``mama'' or ``dada'' to avoid the possibility of skewing the data. After pilot testing on Amazon Mechanical Turk, we added another question asking whether the child's first utterance was ``mama'' or ``dada'', and found that 1112 parents reported their children producing ``mama'' (N = 618) or "dada" (N = 494) other than another first word (N = 559).   
 
 \subsection{Age} 
 
