first hurdle stuff

--- a/paper/fw_cogsci.bib
+++ b/paper/fw_cogsci.bib
@@ -2,12 +2,92 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Michael Frank at 2015-01-22 22:03:52 -0800 
+%% Created for Dan Yurovsky at 2015-01-26 10:17:32 -0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{mullahy1986,
+	Author = {Mullahy, John},
+	Date-Added = {2015-01-26 17:47:49 +0000},
+	Date-Modified = {2015-01-26 17:47:58 +0000},
+	Journal = {Journal of Econometrics},
+	Number = {3},
+	Pages = {341--365},
+	Publisher = {Elsevier},
+	Title = {Specification and testing of some modified count data models},
+	Volume = {33},
+	Year = {1986}}
+
+@article{wilson1988,
+	Author = {Wilson, Michael},
+	Date-Added = {2015-01-26 17:45:08 +0000},
+	Date-Modified = {2015-01-26 17:45:16 +0000},
+	Journal = {Behavior Research Methods, Instruments, \& Computers},
+	Number = {1},
+	Pages = {6--10},
+	Publisher = {Springer},
+	Title = {MRC Psycholinguistic Database: Machine-usable dictionary, version 2.00},
+	Volume = {20},
+	Year = {1988}}
+
+@book{macwhinney2000,
+	Author = {MacWhinney, Brian},
+	Date-Added = {2015-01-26 17:44:10 +0000},
+	Date-Modified = {2015-01-26 17:44:10 +0000},
+	Publisher = {Mahwah, NJ: Lawrence Erlbaum Associates.},
+	Title = {The CHILDES project: Tools for analyzing talk. Third edition.},
+	Year = {2000}}
+
+@article{goodman2008,
+	Author = {Goodman, Judith C and Dale, Philip S and Li, Ping},
+	Date-Added = {2015-01-26 17:40:00 +0000},
+	Date-Modified = {2015-01-26 17:41:12 +0000},
+	Journal = {Journal of Child Language},
+	Number = {3},
+	Pages = {515--531},
+	Publisher = {Cambridge Univ Press},
+	Title = {Does frequency count? Parental input and the acquisition of vocabulary},
+	Volume = {35},
+	Year = {2008}}
+
+@article{cooper1990,
+	Author = {Cooper, Robin Panneton and Aslin, Richard N},
+	Date-Added = {2015-01-26 17:09:14 +0000},
+	Date-Modified = {2015-01-26 17:09:22 +0000},
+	Journal = {Child Development},
+	Number = {5},
+	Pages = {1584--1595},
+	Publisher = {Wiley Online Library},
+	Title = {Preference for infant-directed speech in the first month after birth},
+	Volume = {61},
+	Year = {1990}}
+
+@article{werker2005,
+	Author = {Werker, Janet F and Curtin, Suzanne},
+	Date-Added = {2015-01-26 17:08:38 +0000},
+	Date-Modified = {2015-01-26 17:08:42 +0000},
+	Journal = {Language Learning and Development},
+	Number = {2},
+	Pages = {197--234},
+	Publisher = {Taylor \& Francis},
+	Title = {PRIMIR: A developmental framework of infant speech processing},
+	Volume = {1},
+	Year = {2005}}
+
+@article{bergelson2012,
+	Author = {Bergelson, Elika and Swingley, Daniel},
+	Date-Added = {2015-01-26 17:07:27 +0000},
+	Date-Modified = {2015-01-26 17:07:33 +0000},
+	Journal = {Proceedings of the National Academy of Sciences},
+	Number = {9},
+	Pages = {3253--3258},
+	Publisher = {National Acad Sciences},
+	Title = {At 6--9 months, human infants know the meanings of many common nouns},
+	Volume = {109},
+	Year = {2012}}
 
 @article{tincoff1999,
 	Author = {Tincoff, R. and Jusczyk, P. W.},
@@ -796,18 +876,6 @@
 	Date-Modified = {2012-07-17 18:00:30 +0000},
 	Title = {Zero anaphora and object reference in Japanese child-directed speech},
 	Year = {2012}}
-
-@article{goodman2008,
-	Author = {Goodman, J.C. and Dale, P.S. and Li, P.},
-	Date-Added = {2012-07-17 17:25:33 +0000},
-	Date-Modified = {2012-07-17 17:25:35 +0000},
-	Journal = {Journal of child language},
-	Number = {3},
-	Pages = {515},
-	Publisher = {Cambridge Univ Press},
-	Title = {Does frequency count? Parental input and the acquisition of vocabulary},
-	Volume = {35},
-	Year = {2008}}
 
 @article{huttenlocher2002,
 	Author = {Huttenlocher, J. and Vasilyeva, M. and Cymerman, E. and Levine, S.},
@@ -3178,16 +3246,6 @@
 	Publisher = {John Benjamins Publishing Co},
 	Title = {Competition and lexical categorization},
 	Year = {1989}}
-
-@book{macwhinney2000,
-	Address = {Mahwah, NJ},
-	Author = {MacWhinney, B.},
-	Date-Added = {2010-07-03 14:35:45 +0200},
-	Date-Modified = {2014-07-01 16:55:40 +0000},
-	Publisher = {Lawrence Erlbaum Associates},
-	Title = {{The CHILDES Project: Tools for Analyzing Talk. Third Edition.}},
-	Year = {2000},
-	Bdsk-Url-1 = {http://books.google.com/books?hl=en&lr=&id=liXakW37ifQC&oi=fnd&pg=IA1&dq=childes+macwhinney&ots=onycIJhvjr&sig=xd_aVFOwYF4Y0StYGkznq6lF7rs}}
 
 @article{macwhinney2004,
 	Author = {MacWhinney, B.},
