--- a/paper/FW_cogsci_format.tex
+++ b/paper/FW_cogsci_format.tex
@@ -40,7 +40,7 @@ The emergence of language in infancy is among the most astonishing developmental
 
 First, from a very early point in development, infants exhibit an aptitude for language, even showing a preference for infant--directed over adult--directed speech at 1 month \cite{cooper1990}.  Over the course of the first year, infants are learning to recognize the distinctive sounds and word forms of their native language \cite{kuhl2004} and to segment these phonetic forms and words \cite{werker2005}. Additionally, by 6 - 9  months, many infants already show a tendency to look to matching pictures when they hear common nouns, suggesting early beginnings for form-meaning mapping as well \cite{bergelson2012}. Infants' language comprehension abilities appear to be reasonably well-developed prior to 12 months. However, conventional wisdom holds that language production typically begins around the first birthday. Is this lag between comprehension and production real, or only apparent?
 
-Second, what is the relationship between the words children learn and their conceptual development? Typically-developing monolingual children exhibit some particular relations between certain cognitive developments and language productions; for example, acquisition of words about disappearance are correlated with the comprehension of object permanence \cite{gopnik1986}.  In contrast, 2 and 5 year--old international adoptees newly learning English show the same pattern of language acquisition as monolingual infants, both in time course and pattern of productive utterances \cite{snedeker2005}. This dissociation suggests that at older ages conceptual development may interact very little with word learning, but what about at younger ages with general referential language acquisition? Thus, when trying to untangle conceptual and linguistic development in infants, the first word is a very important as a measurable developmental milestone and as a more concrete indicator of a child's developmental state.  Do patterns of first word productions suggest any relationship between language acquisition and cognitive development? 
+Second, what is the relationship between the words children learn and their conceptual development? Typically-developing monolingual children exhibit some particular relations between certain cognitive developments and language productions; for example, acquisition of words about disappearance are correlated with the comprehension of object permanence \cite{gopnik1996}.  In contrast, 2 and 5 year--old international adoptees newly learning English show the same pattern of language acquisition as monolingual infants, both in time course and pattern of productive utterances \cite{snedeker2007}. This dissociation suggests that at older ages conceptual development may interact very little with word learning, but what about at younger ages with general referential language acquisition? Thus, when trying to untangle conceptual and linguistic development in infants, the first word is a very important as a measurable developmental milestone and as a more concrete indicator of a child's developmental state.  Do patterns of first word productions suggest any relationship between language acquisition and cognitive development? 
 
 Because very early language is difficult to observe in the lab, we leverage parent reports to learn about children's first words. A child's first word is highly memorable for parents, and many parents record this milestone in baby books. As a scientific measure, however, parent report has both drawbacks and advantages. One issue with any self--report measure is that there is no way to validate participants' responses. Another complication is that parents may be biased observers, and interpret word--like babble as productive communication. Parent report is widely used as a measure of early child language, e.g. in the MacArthur--Bates Communicative Development Inventory (CDI), a vocabulary checklist that is both a reliable and valid measure of early vocabulary \cite{fenson1994,fenson2007}. Nevertheless, the reliability of the earliest ages of the CDI have been questioned \cite{feldman2000}.
 
@@ -54,7 +54,7 @@ Our final dataset, drawn from \href{http://wordbank.stanford.edu}{\tt{Wordbank}}
 
 However, the data we received from these surveys was generally very consistent, both within and across datasets, indicating that parents responded appropriately. In addition to yielding reliable data, our first word surveys were highly effective, and were completed quickly and with minimal effort by many parents. 
 
-Drawing on these datsets, we investigate the timecourse of the emergence of productive language   and potential factors that might lead to individual differences in linguistic development. In Analysis 1, we investigate differences in age of first word onset, and find that 75 percent of children produce a word prior to 12 months. In Analysis 2, we explore whether early and later producers are sampling first words from conceptually different categories, and find no significant distribution in semantic categories before and after the first year. Finally, in Analysis 3, we turn to factors that may result in certain words and conceptual categories being more frequently produced as a first word ---- This will come later...
+Drawing on these datsets, we investigate the timecourse of the emergence of productive language and potential factors that might lead to individual differences in linguistic development. In Analysis 1, we investigate differences in age of first word onset, and find that 75 percent of children produce a word prior to 12 months. In Analysis 2, we explore whether early and later producers are sampling first words from conceptually different categories, and find no significant distribution in semantic categories before and after the first year. Finally, in Analysis 3, we turn to factors that may result in certain words and conceptual categories being more frequently produced as a first word ---- This will come later...
 
 %%GENERAL DATA METHODS%%
 \section{General Data Collection Methods}
@@ -102,24 +102,20 @@ Data were handled similarly to Datasets 1 and 2.
 \subsection{Dataset 4: MB--CDI Wordbank}
 
 \subsection{Participants}
-From all available data on Wordbank, we selected 76 children whose parents reported as producing exactly one word (31 female, 45 male, M age = 10.63 mo, median = 11 mo). Guardian education levels were fairly diverse (Ns as follows: Some high school = 4; High school = 24; Some college = 21; College = 17; Some graduate school = 1; Graduate school = 9). 
-
-\subsection{Methods}
-
-\subsection{Data preparation}
+At the time of our analysis, the Wordbank database contained 949 unique MCDI Words and Gestures administrations. From these, we selected the 76 children  whose parents reported that they produced exactly one word (31 female, 45 male, M age = 10.63 mo, median = 11 mo). Guardian education levels were fairly diverse (Ns as follows: Some high school = 4; High school = 24; Some college = 21; College = 17; Some graduate school = 1; Graduate school = 9). 
 
 %Analyses
 \section{Analyses}
 The process by which children come to produce language has long been the focus of research and discussion. Noun comprehension has been shown to occur prior to production \cite{tincoff1999,tincoff2012,bergelson2012}, indicating that infants can successfully map words to objects. Children also begin producing the sounds of their native language fairly early in the form of babbles (citation here). However, the first word does not emerge until later (citation here). What are conceptual and linguistic developmental changes that occur over this time, and how are they related both to each other and to the appearance of the first word?
 
-In analyzing this data, we are interesting in understanding the timeline of the emergence of productive language and the factors predicting this \emph{¥}mergence in individuals. We first look at the age at which children's first word emerges to assess variability in onset of productive language. We find that 75\% of children produce a first word by 12 months as well as evidence of a wider age range in which the first word is typically uttered.
+In analyzing this data, we are interesting in understanding the timeline of the emergence of productive language and the factors predicting this emergence in individuals. We first look at the age at which children's first word emerges to assess variability in onset of productive language. We find that 75\% of children produce a first word by 12 months as well as evidence of a wider age range in which the first word is typically uttered.
 
 Why are some children producing language earlier than others, and are these words significantly different semantically from later--produced words? Such a difference could indicate a loose coupling of linguistic and conceptual development, whereas if preference for certain semantic categories suggests that children at different stages of development are sampling first words from the same conceptual categories. We next wished to compare MB--CDI category distributions in early and later producers ($<$12 months and $>$ 12 months) to explore whether early producers' words are drawn from conceptually different categories than later producers'.
 
 We do not find that later producers are sampling words from a different or more diverse range of conceptual categories, but instead find that children across development are speaking about the same kinds of things, and often even the same things. What makes these words more likely to be produced as a first word, if they do not significantly differ conceptually? In our next analysis, we examined both the phonetic probability of individual words within CDI categories, as well as their correlation with parental input.
 
 \subsection{Exclusion of ``mama'' and ``dada''}
-While many parents reported that their child's first word was ``mama'' or ``dada'' (or some variant), we excluded these children from our analyses. Parents may be motivated to hear these words very early in babble, even when the word is not being used in a meaningful or consistent way. Therefore, we stressed in our surveys that parents were to report their children's first word $other$ than ``mama'' or ``dada'' to avoid the possibility of skewing the data. After pilot testing on Amazon Mechanical Turk, we added another question asking whether the child's first utterance was ``mama'' or ``dada'', and found that 1112 parents reported their children producing ``mama'' (N = 618) or "dada" (N = 494) other than another first word (N = 559).   
+While many parents reported that their child's first word was ``mama'' or ``dada'' (or some variant), we excluded these children from our analyses. Parents may be motivated to hear these words very early in babble, even when the word is not being used in a meaningful or consistent way. Therefore, we stressed in our surveys that parents were to report their children's first word $other$ than ``mama'' or ``dada'' to avoid the possibility of skewing the data. After pilot testing on Amazon Mechanical Turk, we added another question asking whether the child's first utterance was ``mama'' or ``dada,'' and found that 1112 parents reported their children producing ``mama'' (N = 618) or "dada" (N = 494) other than another first word (N = 559).   
 
 \subsection{Age} 
 
@@ -177,12 +173,30 @@ Despite producing a first word during different points in their conceptual devel
 However, out of all the sets of possible first words, why are children consistently choosing to produce words predominantly from these semantic categories? What is tipping the balance in favor of these particular words? Some potential factors are frequency of parental input, the phonetic probability and ease of production, and potentially just relevance to a developing child. In the next analysis, we examine all of these within CDI categories to attempt to untangle what causes the measure of consistency we observe in first word variability.
 
 
-\subsection{Input Frequencies}
--- Question
--- Describe analyses
--- Details of stats
--- Differences across studies
--- Data suggests
+\section{Predicting First Words}
+
+Our previous analyses found a high degree of consistency among children's first productions. Independent of age, gender, and birth order, children seem to produce the same first words. Why these words? To say a word, a child must minimally have been exposed to that word, and also be able to pronounce it. We thus consider two factors known to predict the acquisition of words more broadly: input frequency, and phonetic complexity \cite{goodman2008}.
+
+\subsection{Method}
+
+Because the set of all possible words is infinite, it is impossible to normalize correctly. Thus, we chose to use a representative set that would allow us to have the same basis for comparison across datasets: the 385 words on the MCDI Words and Gestures form. We thus chose the subset of words in each of our datasets that appeared on the cdi, and asked about the relative probability of production of each of these words.
+
+To estimate the frequency with children hear each of these words, we counted the number of times each appeared in CHILDES---a large corpus of parent-child interactions \cite{macwhinney2000}. In order to ensure a representative sample, we counted the number of appearances of each word in a child's mother's speech across all of the corpora in the North American subset of CHILDES. These frequencies were then log-transformed and used to predict first words.
+
+To estimate phonetic complexity, we chose a simple, theory-independent measure: number of phonemes. For each of this same subset of words, we queried the MRC Psycholinguistic Database \cite{Wilson1988}. Number of phonemes is an imperfect measure of phonetic complexity---e.g. it misses differences in articulatory complexity that contribute to the relative difficulty of producing different words (e.g. ``truck'' vs. ``bunny'')---but it does capture much of the variability among the CDI words.
+
+To predict the effects of continuous predictors on count outcomes, it is common to use Poisson regression. However, Poisson regression behaves poorly in practice because empirical counts violate its assumptions in two ways: their variance is greater than expected (over dispersion), and too many of them are zero (zero inflation). To adjust for these violations, we used a hurdle model that adds a second component to Poisson regression: a binomial threshold (hurdle) that first determines whether a count is-nonzero \cite{mullahy1986}. Because the datasets were of such different sizes, we fit a separate hurdle regression to each.
+
+\subsection{Results and Discussion}
+
+Across datasets, input frequency and phonetic complexity consistently predicted the number of children who produced each word as their first word. As we predicted, in almost all cases words were more likely to be produced as a child's first word if they were higher frequency in children's input, and had few phonemes (Figure~\ref{fig:hurdles}). In conjunction with the analyses above, these results suggest a high degree of consistency in children's first productions, independent of demographic factors and conceptual development, and dependent instead on linguistic input and speech production fluency.
+
+(ASIDE: Wordbook goes the other way, check against the understood words).
+
+\begin{figure}[tb]
+	\center{\includegraphics[width=.48\textwidth]{figures/hurdle_params.pdf}}
+\caption{\label{fig:hurdles} Parameter estimates for hurdle models predicting children's first words. Models showed a high degree of consistency across datasets: first words tend to be higher frequency and have fewer phonemes. Intercepts are ommitted for clarity.}
+\end{figure}
 
 \section{Discussion}
 
