editing analyses, making things clearer

--- a/paper/FW_cogsci_format.tex
+++ b/paper/FW_cogsci_format.tex
@@ -46,12 +46,6 @@ Because very early language is difficult to observe in the lab, we leverage pare
 
 To address the issues of self--report, we gathered data from a number of sources. We specifically targeted different populations in our selections of data sources. The diversity of these four datasets encouraged a representative sample of children's first words, with each data source contributing its own set of advantages and drawbacks to the complete dataset. 
 
-The first dataset source, parents subscribed to The Children's Discovery Museum (CDM) mailing list, was chosen for collection because these parents were an ethnically diverse population with a higher education level than the general population, potentially leading to more accurate responses. For our next data source we targeted the Amazon Mechanical Turk (MTurk) population. This community is more representative of the general population in terms of age, gender, education level, and socio-economic status (SES). 
-
-To complement our data from the general population, we next collected first word data from parents in the Psycholinguistic community. This population was specifically selected for its familiarity with the subject as well as for highly accurate diary records. However, this population ended up being very small (N = 58).
-
-Our final dataset, drawn from \href{http://wordbank.stanford.edu}{\tt{Wordbank}} was chosen because data points came from the MB-CDI, which is typically filled out closer in time to when the child produced her first word. A potential confound of the MB-CDI is a possible demand characteristic encouraging parents to report their children producing some word, as well as containing a somewhat limited set of potential words.
-
 However, the data we received from these surveys was generally very consistent, both within and across datasets, indicating that parents responded appropriately. In addition to yielding reliable data, our first word surveys were highly effective, and were completed quickly and with minimal effort by many parents. 
 
 Drawing on these datasets, we investigate the time course of the emergence of productive language and potential factors that might lead to individual differences in linguistic development. In Analysis 1, we investigate differences in age of first word onset, and find that 75 percent of children produce a word prior to 12 months. In Analysis 2, we explore whether early and later producers are sampling first words from conceptually different categories, and find no significant distribution in semantic categories before and after the first year. Finally, in Analysis 3, we turn to factors that may result in certain words and conceptual categories being more frequently produced as a first word ---- This will come later...
@@ -59,6 +53,12 @@ Drawing on these datasets, we investigate the time course of the emergence of pr
 %%GENERAL DATA METHODS%%
 \section{General Data Collection Methods}
 Data for this study is comprised of four different datasets, each obtained from a different source. Three of the four datasets were drawn from surveys specifically designed for this study. The last dataset contains data from \href{http://wordbank.stanford.edu}{\tt{Wordbank}}, an online repository of data from the MacArthur--Bates Communicative Development Inventories (MB--CDI), a widely--used parent--report vocabulary checklist (Fenson et al., 2007).
+
+The first dataset source, parents subscribed to The Children's Discovery Museum (CDM) mailing list, was chosen for collection because these parents were an ethnically diverse population with a higher education level than the general population, potentially leading to more accurate responses. For our next data source we targeted the Amazon Mechanical Turk (MTurk) population. This community is more representative of the general population in terms of age, gender, education level, and socio-economic status (SES). 
+
+To complement our data from the general population, we next collected first word data from parents in the Psycholinguistic community (Info). This population was specifically selected for its familiarity with the subject as well as for highly accurate diary records. However, this population ended up being very small (N = 58).
+
+Our final dataset, drawn from \href{http://wordbank.stanford.edu}{\tt{Wordbank}} was chosen because data points came from the MB-CDI, which is typically filled out closer in time to when the child produced her first word. A potential confound of the MB-CDI is a possible demand characteristic encouraging parents to report their children producing some word, as well as containing a somewhat limited set of potential words.
 
 Overall, these methods of parental report yielded consistent and rich data with minimal time investment on behalf of the parent. However, as with most self--report measures, our surveys did have some disadvantages. While in every data collection we tried to stress that a first word was defined as a consistent set of sounds referring to the same referent across many contextual frames, we have no way of validating the parental report. Another issue was standardization of the child's first word, especially in the MTurk dataset, discussed below. 
 
@@ -104,15 +104,20 @@ Data were handled similarly to Datasets 1 and 2.
 \subsection{Participants}
 At the time of our analysis, the Wordbank database contained 949 unique MCDI Words and Gestures administrations. From these, we selected the 76 children whose parents reported that they produced exactly one word (31 female, 45 male, M age = 10.63 mo, median = 11 mo). Guardian education levels were fairly diverse (Ns as follows: Some high school = 4; High school = 24; Some college = 21; College = 17; Some graduate school = 1; Graduate school = 9). 
 
+\subsection{Data preparation}
+Because responses were taken directly from parental reports on the MB-CDI, no data preparation was necessary.
+
 %Analyses
 \section{Analyses}
-The process by which children come to produce language has long been the focus of research and discussion. Noun comprehension has been shown to occur prior to production \cite{tincoff1999,tincoff2012,bergelson2012}, indicating that infants can successfully map words to objects. Children also begin producing the sounds of their native language fairly early in the form of babbles (citation here). However, the first word does not emerge until later (citation here). What are conceptual and linguistic developmental changes that occur over this time, and how are they related both to each other and to the appearance of the first word?
+The emergence of language in infancy has long been the focus of research and discussion. Noun comprehension has been shown to occur prior to production, indicating a conceptual understanding of label-referent mapping at 6-9 months \cite{tincoff1999,tincoff2012,bergelson2012}. As early as 12 weeks, children begin producing the sounds of their native language /cite{kuhl1996}, suggesting an early beginning to linguistic development. Yet the first word is not typically expected until around 12 months. Does a lag between comprehension and production exist, and what is the relationship between the words that children learn and their conceptual development? 
 
-In analyzing this data, we are interesting in understanding the timeline of the emergence of productive language and the factors predicting this emergence in individuals. We first look at the age at which children's first word emerges to assess variability in onset of productive language. We find that 75\% of children produce a first word by 12 months as well as evidence of a wider age range in which the first word is typically uttered.
+In analyzing this data, we are interested first in understanding the timeline of the emergence of productive language and the factors predicting this emergence in individuals. We explore whether productive language lags comprehension with an analysis of children's ages at the time of their first words. We find that 75\% of children produce a first word by 12 months as well as evidence of a wide age range in which the first word is typically uttered.
 
-Why are some children producing language earlier than others, and are these words significantly different semantically from later--produced words? Such a difference could indicate a loose coupling of linguistic and conceptual development, whereas if preference for certain semantic categories suggests that children at different stages of development are sampling first words from the same conceptual categories. We next wished to compare MB--CDI category distributions in early and later producers ($<$12 months and $>$ 12 months) to explore whether early producers' words are drawn from conceptually different categories than later producers'.
+We next turn to the question of why some children are producing language earlier than others, and if this reveals anything about the relationship between conceptual and linguistic development. First, we compare distributions of semantic (CDI) categories in first word productions in children older and younger than 12 months. If early producers' CDI category distributions are significantly different than later producers', this could indicate a loose coupling of linguistic and conceptual development. However, we find that both before and after the first year, children's first words tend to come from the same conceptual categories.
 
-We do not find that later producers are sampling words from a different or more diverse range of conceptual categories, but instead find that children across development are speaking about the same kinds of things, and often even the same things. What makes these words more likely to be produced as a first word, if they do not significantly differ conceptually? In our next analysis, we examined both the phonetic probability of individual words within CDI categories, as well as their correlation with parental input.
+We do not find that later producers are sampling words from a different or more diverse range of conceptual categories, but instead find that children across development are speaking about the same kinds of things, and often even the same things. What makes these words more likely to be produced as a first word, if they do not significantly differ conceptually? In our final analysis, we examined both the phonetic probability of individual words within CDI categories, as well as their correlation with parental input in an attempt to determine why some words are consistently produced before others. 
+
+Overall, we find that 
 
 \subsection{Exclusion of ``mama'' and ``dada''}
 While many parents reported that their child's first word was ``mama'' or ``dada'' (or some variant), we excluded these children from our analyses. Parents may be motivated to hear these words very early in babble, even when the word is not being used in a meaningful or consistent way. Therefore, we stressed in our surveys that parents were to report their children's first word $other$ than ``mama'' or ``dada'' to avoid the possibility of skewing the data. After pilot testing on Amazon Mechanical Turk, we added another question asking whether the child's first utterance was ``mama'' or ``dada,'' and found that 1112 parents reported their children producing ``mama'' (N = 618) or "dada" (N = 494) other than another first word (N = 559). 
