--- a/paper/fw_cogsci.bib
+++ b/paper/fw_cogsci.bib
@@ -2,12 +2,25 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Dan Yurovsky at 2015-01-26 10:17:32 -0800 
+%% Created for Rose Schneider at 2015-01-26 16:10:23 -0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{gopnik1986,
+	Author = {Alison Gopnik and Andrew N. Meltzoff},
+	Date-Added = {2015-01-26 23:51:36 +0000},
+	Date-Modified = {2015-01-27 00:00:34 +0000},
+	Journal = {Child Development},
+	Month = {August},
+	Number = {4},
+	Pages = {1040-1053},
+	Read = {1},
+	Title = {Relations between semantic and cognitive development in the one-word stage: The specificity hypothesis},
+	Volume = {57},
+	Year = {1986}}
 
 @article{mullahy1986,
 	Author = {Mullahy, John},
