getting to compile

--- a/paper/firstwords.tex
+++ b/paper/firstwords.tex
@@ -1,9 +1,8 @@
-
 \documentclass[10pt,letterpaper]{article}
 
 \usepackage{hyperref}
 \usepackage{cogsci}
-\usepackage[nodoi]{apacite}
+\usepackage[nodoi]{apacite2}
 \usepackage{pslatex}
 \usepackage{pdfsync}
 \usepackage{amsmath}
@@ -196,7 +195,7 @@ To predict the number of observations of each of a set of a categorical outcomes
 Across datasets, input frequency and phonetic complexity consistently predicted the number of children who produced each word as their first word. As we hypothesized, in almost all cases candidate words were more likely to be first words if they were higher frequency in children's input, and if they had fewer phonemes (Figure~\ref{fig:hurdles}). In conjunction with the analyses above, these results suggest a high degree of consistency in children's first productions, independent of conceptual development, and dependent instead on linguistic input and speech production fluency.
 
 \begin{figure}[tb]
-\center{\includegraphics[width=.48\textwidth]{figures/hurdle_params.pdf}}
+% \center{\includegraphics[width=.48\textwidth]{figures/hurdle_params.pdf}}
 \caption{\label{fig:hurdles} Parameter estimates for hurdle models predicting children's first words. Models showed a high degree of consistency across datasets: first words tend to be higher frequency and have fewer phonemes. Intercepts are omitted for clarity.}
 \end{figure}
 
@@ -205,7 +204,7 @@ Across datasets, input frequency and phonetic complexity consistently predicted 
 \section{Acknowledgements}
 
 
-\bibliographystyle{myapacite}
+\bibliographystyle{apacite}
 
 \setlength{\bibleftmargin}{.125in}
 \setlength{\bibindent}{-\bibleftmargin}
